Refactor controllers for consistency and usability enhancements
- Update imports to use `infrastructure.ConsoleView` for accuracy.
- Limit copy additions in `AdminController` to a maximum of 50 for better validation.
- Replace `Collectors.toList()` with `toList()` for simplicity in `AdminController`.
- Rename "Back to List" to "Cancel" in `LibraryController` for clearer user experience.